# MRPC-2025-homework

code/: README.md  calculate_results.py
code/T1/: T1.md
code/T2/: T2.md
code/T3/: T3.md  params.md
code/src/quadrotor_df/: CMakeLists.txt  README.md  package.xml
code/src/quadrotor_df/include/quadrotor_df/: differential_flatness.h
code/src/quadrotor_df/scripts/: plot_quaternion.py  visualize_trajectory.py
code/src/quadrotor_df/src/: compute_quaternion.cpp  differential_flatness.cpp
code/src/quadrotor_simulator/so3_control/src/: control_data.txt  control_timedata.txt  so3_control_nodelet.cpp
code/src/quadrotor_simulator/so3_quadrotor_simulator/src/: quadrotor_simulator_so3.cpp
code/src/quadrotor_simulator/so3_quadrotor_simulator/src/dynamics/: Quadrotor.cpp
code/src/trajectory_generator/: CMakeLists.txt
code/src/trajectory_generator/include/: informed_rrt.h
code/src/trajectory_generator/src/: Astar_searcher.cpp  informed_rrt.cpp  trajectory_generator_node.cpp
documents/: S1.md  homework.md
documents/Q1/: Q1.md  S1.py
documents/Q2/: Q2.md  S2_1.md  S2_2.md  S2_3.md
documents/Q3/: Q3.md  S3.md
solutions/: df_quaternion.csv
