<?xml version="1.0"?>
<package>
  <name>quadrotor_df</name>
  <version>0.0.0</version>
  <description>
    Differential flatness computation for quadrotor trajectory
  </description>
  <maintainer email="user@example.com">User</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>

